# web

./: .gitignore  CMakeLists.txt
agent/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/src/core/: main.cpp
receptor/: CMakeLists.txt
receptor/include/receptor/: def.h
receptor/src/core/: receptor.c  receptor.h  receptor_array.c  receptor_array.h  receptor_list.c  receptor_list.h  receptor_palloc.c  receptor_palloc.h  receptor_string.c  receptor_string.h
receptor/src/event/: receptor_event.c  receptor_event.h  receptor_event_epoll.c  receptor_event_iocp.c  receptor_event_select.c
receptor/src/event/module/: receptor_event_epoll.c  receptor_event_iocp.c  receptor_event_select.c
receptor/src/http/: receptor_http.h  receptor_http_request.h
receptor/src/include/: receptor_config.h  receptor_config.h.in  receptor_defs.h
receptor/src/os/win32/: receptor_os.c  receptor_os.h
web/: CMakeLists.txt
web/src/core/: main.cpp
